@@ -1,14 +1,14 @@
 package com.mpay24.payment.mapper;
 
-import static org.junit.Assert.*;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import static org.junit.Assert.assertEquals;
 
 public class SdkApiObjectMapperTest {
 
@@ -22,7 +22,7 @@ public class SdkApiObjectMapperTest {
 
 	@Test
 	public void testGetExpiredateAsLong() throws ParseException {
-		assertEquals(new Long(1604), new SdkApiObjectMapper().getExpiredateAsLong(getDate("04/2016")));
+		assertEquals(Long.valueOf(1604), new SdkApiObjectMapper().getExpiredateAsLong(getDate("04/2016")));
 	}
 
 	private Date getDate(String dateString) throws ParseException {
